<?xml version="1.0"?>
<package>
  <name>new_layers</name>
  <version>0.0.0</version>
  <description>Binding places and SLAM based map togehter</description>

  <maintainer email="paloma@todo.todo">paloma</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend> 
  <build_depend>dynamic_reconfigure</build_depend> <!-- FIXME -->
  <build_depend>pluginlib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pluginlib</run_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
  </export>
</package>


