<?xml version="1.0"?>
<package>
  <name>person_aggregator</name>
  <version>1.0.0</version>
  <description>
     Combining Person Topics in a unified way
  </description>
  <maintainer email="ammarkov@ics.forth.gr">Ammar Qammaz</maintainer>
  <author email="ammarkov@ics.forth.gr">Ammar Qammaz</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
 
  <run_depend>geometry_msgs</run_depend> 
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
