<?xml version="1.0"?>
<package>
  <name>rgbd_acquisition</name>
  <version>0.0.0</version>
  <description>
    Our OpenNI2 Acquisition / Skeleton / Head tracker </description>
  <maintainer email="ammarkov@ics.forth.gr">Ammar Qammaz</maintainer>
  <author email="ammarkov@ics.forth.gr">Ammar Qammaz</author>
  <license>BSD</license>
  <url type="website">http://ics.forth.gr/</url>  

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libopenni2-dev</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
<!--  <build_depend>libopenni-nite-dev</build_depend> -->
  <build_depend>libopenni-sensor-primesense-dev</build_depend> 
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>libopenni2-dev</run_depend>
  <run_depend>libusb-1.0-dev</run_depend>
<!--  <run_depend>libopenni-nite-dev</run_depend> -->
  <run_depend>libopenni-sensor-primesense-dev</run_depend>
  <run_depend>geometry_msgs</run_depend>
 <!--   <run_depend>orocos_kdl</run_depend> -->
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>tf</run_depend>
</package>
